@@ -5,7 +5,6 @@ require (
 	git.torproject.org/pluggable-transports/goptlib.git v1.0.0
 	github.com/dchest/siphash v1.2.1
 	gitlab.com/yawning/edwards25519-extra.git v0.0.0-20211229043746-2f91fcc9fbdb
-	gitlab.com/yawning/utls.git v0.0.12-1
 	golang.org/x/crypto v0.0.0-20210711020723-a769d52b0f97
 	golang.org/x/net v0.0.0-20210226172049-e18ecbb05110
 )
